-*- text -*-

* Add support for GNU_PROPERTY_X86_FEATURE_1_IBT in ELF GNU program

* Support for -z ibtplt in the x86 ELF linker to generate IBT-enabled
  PLT.

* Support for -z ibt in the x86 ELF linker to generate IBT-enabled
  PLT as well as GNU_PROPERTY_X86_FEATURE_1_IBT in ELF GNU program
  properties.

* Add support for ELF SHF_GNU_MBIND and PT_GNU_MBIND_XXX.

* Add support for ELF GNU program properties.

* Add support for the Texas Instruments PRU processor.

* When configuring for arc*-*-linux* targets the default linker emulation will
  change if --with-cpu=nps400 is used at configure time.

* Improve assignment of LMAs to orphan sections in some edge cases where a
  mixture of both AT>LMA_REGION and AT(LMA) are used.

* Orphan sections placed after an empty section that has an AT(LMA) will now
  take an load memory address starting from LMA.

* Section groups can now be resolved (the group deleted and the group members
  placed like normal sections) at partial link time either using the new linker
  option --force-group-allocation or by placing FORCE_GROUP_ALLOCATION into the
  linker script.

Changes in 2.28:

* The EXCLUDE_FILE linker script construct can now be applied outside of the
  section list in order for the exclusions to apply over all input sections in
  the list.

* Add support for the RISC-V architecture.

* The command line option --no-eh-frame-hdr can now be used in ELF based
  linkers to disable the automatic generation of .eh_frame_hdr sections.

* Add --in-implib=<infile> to the ARM linker to enable specifying a set of
  Secure Gateway veneers that must exist in the output import library specified
  by --out-implib=<outfile> and the address they must have.  As such,
  --in-implib is only supported in combination with --cmse-implib.

* Extended the --out-implib=<file> option, previously restricted to x86 PE
  targets, to any ELF based target.  This allows the generation of an import